[metadata]
name = mll

author = Murray Liang
author-email = menglei.leung@gmail.com
maintainer = Murray Liang
maintainer-email = menglei.leung@gmail.com
summary = Utilities of machine learning and deep learning
description-file = README.md
home-page = https://github.com/murray-liang/mll
license = Apache Version 2
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Version 2 License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: Software Development :: Libraries :: Python Modules

keywords =
    ai
    machine-learning

[files]
packages =
    mll

[entry_points]
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain

[bdist_wheel]
universal = 1